# draft

./: .gitattibutes  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  design.txt  rustfmt.toml
.github/workflows/: greetings.yml
crates/draft-cli/: Cargo.toml  README.md
crates/draft-cli/src/: main.rs
crates/draft-core/: Cargo.toml  README.md
crates/draft-core/src/: ast.rs  compile.rs  ext.rs  lib.rs  markup.rs  object.rs  tape.rs  token.rs
crates/draft-core/src/data/: mod.rs  parser.rs
crates/draft-core/src/expr/: mod.rs
crates/draft-core/src/markup/: config.rs  lexer.rs  lexer_data.rs  lexer_utils.rs  mod.rs  parser.rs  parser_data.rs  parser_utils.rs  traversal.rs  traversal_utils.rs  vocab.rs
crates/draft-editor/: Cargo.toml  README.md
crates/draft-editor/src/: main.rs
crates/draft-lsp/: Cargo.toml  README.md
crates/malgam-cli/: Cargo.toml
crates/malgam-core/: Cargo.toml
crates/malgam-core/src/: ext.rs  hg.rs  hgon.rs  lib.rs  tape.rs  token.rs
crates/malgam-editor/: Cargo.toml
crates/malgam-lsp/: Cargo.toml
crates/malgam-mgon/: Cargo.toml
samples/: remedies.lrmc  remedies.mal
src/: main.rs  parser.rs  slice_ext.rs  tape.rs  token.rs
