[package]
name = "draft-cli"
version = "0.1.0"
edition = "2024"
authors = ["Angel Eckardt <eckardt.angel7@outlook.com>"]
license = "AGPL-3.0-only"
homepage = "https://github.com/aeckar/draft"
repository = "https://github.com/aeckar/draft"

[dependencies]
draft-core = { path = "../draft-core" }
clap = { version = "4.6.0", features = ["derive", "unstable-doc", "unstable-styles"] }
anyhow = "1.0.102"