[package]
name = "draft-core"
version = "0.1.0"
edition = "2024"
authors = ["Angel Eckardt <eckardt.angel7@outlook.com>"]
license = "AGPL-3.0-only"
homepage = "https://github.com/aeckar/draft"
repository = "https://github.com/aeckar/draft"

[dependencies]
simdutf8 = "0.1.5"
enum-ordinalize = "4.3.2"
boa_engine = "0.21.0"
thiserror = "2.0.18"
memchr = "2.8.0"
pulldown-cmark = "0.13.3"
csv = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

[features]
# default = ["compile", "format"]
# compile = []
# format = []
# transpile = ["markdown-parser-crate"] # Only pull in Markdown deps if needed

[lib]
path = "src/lib.rs"
